<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="token_key">access_token</string>
    <string name="location_time_key">location_time</string>
    <string name="grant_type">password</string>
    <string name="tokentype_key">token_type</string>
    <string name="tokenexpiretime_key">expires_in</string>
    <string name="refresh_token_key">refresh_token</string>
    <string name="globalsettings_key">GlobalSettings</string>
    <string name="status_key">status</string>
    <string name="error_message_key">error_message</string>
    <string name="unknownError">UNKNOWN_ERROR</string>
    <string name="osname">android</string>
    <string name="req_denied">REQUEST_DENIED</string>
    <string name="session_exp">SESSION_EXPIRED</string>
    <string name="google_map_key">AIzaSyBh2ck64D5fETj8h89WSaJGaYkhDzyVeZI</string>
    <string name="userrole">user_role</string>
    <string name="username_shared">user_name</string>
    <string name="reason_id">reason_id</string>
    <string name="description">description</string>
    <string name="reason_type">reason_type</string>
    <string name="tracktime">Traking_Time</string>
    <string name="userkey">user_id</string>
    <string name="managerkey">manager_id</string>
    <string name="userId">userId</string>
    <string name="routeassigmentid_key">routeassigmentid</string>
    <string name="type_id">type_id</string>
    <string name="Bufferlimit">Buffer_Limit</string>
    <string name="reasonname">reasonname</string>
    <string name="keycheckprogress">checkprogress</string>
    <string name="google_map_road_key" tools:ignore="TypographyDashes">AIzaSyDSiw_7S08PqoIrcmlt49bIf7-62j--MPI</string>
    <string name="dd_mmm_yyyy">DD-MMM-YYYY</string>
    <string name="buildgoogleonce">buildgoogleonce</string>
    <string name="route_name">Route Name</string>
    <string name="error">ERROR</string>
    <string name="nosim">No sim card detected</string>
    <string name="manager_phone">manager_phone</string>
    <string name="role_id">role_id</string>
    <string name="role_name">role_name</string>
    <string name="trackkey">trackkey</string>
    <string name="checkinkey">keycheckin</string>
    <string name="navigation">"\ue7f4"</string>
    <string name="picture">Picture</string>
    <string name="maxlimit">MAX_LIMIT</string>
    <string name="uploaddocumentsize">uploaddocumentsize</string>
    <string name="faa">&#xf1ab;</string>
    <string name="app_name">Smart Patroller</string>
    <string name="ASLocationMessage">For a better performance enable the location services, and make sure that the high precision mode is enabled</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gpsprovider">gps</string>
    <string name="networkprovider">network</string>
    <string name="unamehint">Username</string>
    <string name="passhint">Password</string>
    <string name="login">Login</string>
    <string name="mytask">My Tasks</string>
    <string name="attendance">Attendance</string>
    <string name="chat">Chat</string>
    <string name="sos">SOS</string>
    <string name="taskAssign">Manage Task</string>
    <string name="logout">Logout</string>
    <string name="startdatetime">Planned Start Date and Time</string>
    <string name="enddatetime">Planned End Date and Time</string>
    <string name="actualstartdatetime">Actual Start Date and Time</string>
    <string name="actualenddatetime">Actual End Date and Time</string>
    <string name="startdate">Start Date<![CDATA[<font color=#e60000>*</font>]]></string>
    <string name="nodata">No data found</string>
    <string name="back">Back</string>
    <string name="nointernet">No internet connection</string>
    <string name="selectreason">Select reason</string>
    <string name="selectissue">Select the issue</string>
    <string name="usernameerror">Please enter username</string>
    <string name="passworderror">Please enter password</string>
    <string name="usernamepasserror">Please enter username and password</string>
    <string name="userpasserror">Invalid credential</string>
    <string name="enddate">End Date<![CDATA[<font color=#e60000>*</font>]]></string>
    <string name="nosos">No sos data found</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="completed">Completed</string>
    <string name="weather_condition_uploaded">Weather Log uploaded </string>
    <string name="issues_raised">Issue has been raised successfully.</string>
    <string name="raise_issue">Raise Issue</string>
    <string name="sufficient_permissions">You don\'t have sufficient permissions</string>
    <string name="pausetext">Are you sure you want to pause?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="select_reason">Select Reason</string>
    <string name="pausereason">Please enter pause reason</string>
    <string name="routeactionsuccessful">Route action saved successfully</string>
    <string name="reason_pause">PAUSE</string>
    <string name="username">Username<![CDATA[<font color=#e60000>*</font>]]></string>
    <string name="password">Password<![CDATA[<font color=#e60000>*</font>]]></string>
    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="pleasespecify">Please specify</string>
    <string name="save">SAVE</string>
    <string name="endroute">END ROUTE</string>
    <string name="endtext">Are you sure you want to end?</string>
    <string name="raiseissuetext">Are you sure you want to raise issue?</string>
    <string name="pauseroute">PAUSE ROUTE</string>
    <string name="noclosedtask">No closed task found</string>
    <string name="nopendiningtask">No pending task found</string>
    <string name="noinprogresstask">No inprogress task found</string>
    <string name="inprogress">Already checked in</string>
    <string name="noassignedtask">No assigned task found</string>
    <string name="nopetrollerattendence">No attendance found</string>
    <string name="sessionexpired">Your session has expired. Please login again.</string>
    <string name="plannedtasks">Planned Tasks</string>
    <string name="searchpetrollerattendence">Search patroller attendance</string>
    <string name="routecompleted">This routing has been completed!</string>
    <string name="nocontactavailable">Contact number is not available</string>
    <string name="attendance_date">Attendance date :</string>
    <string name="planned_start_time">Planned start time :</string>
    <string name="planned_end_time">Planned end time :</string>
    <string name="actual_start_time">Actual start time :</string>
    <string name="actual_end_time">Actual end time :</string>
    <string name="TrackPatroller">Track Patroller</string>
    <string name="patrollerlist">Patroller List</string>
    <string name="loaderttext" tools:ignore="TypographyEllipsis">Please Wait...</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="no_chat_found">No chat found</string>
    <string name="version_1_1_1_beta">Version 1.1.1 (Beta)</string>
    <string name="others">Others</string>
    <string name="no_planned_task_record_found">No planned task found</string>
    <string name="please_enter_reason">Please enter reason</string>
    <string name="reason">Reason..</string>
    <string name="date">Date</string>
    <string name="startendcompare">Start date is less than end date</string>
    <string name="max31days">You can view attendance of max 31 days only</string>
    <string name="reqdeniedmessage">Your request has denied. Please login again.</string>
    <string name="continuetrack">Continue Tracking</string>
    <string name="trackkmessage">There is some tracking information yet to be uploaded. Do you want to continue? You would not be recover it later.</string>
    <string name="outside_buffer_message_to_manager">Alert! currently user %1$s is outside the buffer limit.</string>
    <string name="users">Users</string>
    <string name="selfieuploaded">Image uploaded successfully.</string>
    <string name="imagerequired">Image is required for this action</string>
    <string name="comment">Comment</string>
    <string name="Checkin">Checkin</string>
    <string name="Checkin_here">Checkin here </string>
    <string name="Checkout">Checkout</string>
    <string name="haltpointcheckin">Checkin successfully</string>
    <string name="datauploadedsuccessfully">Document uploaded successfully</string>
    <string name="haltpointcheckout">Checkout successfully</string>
    <string name="Checkout_here">Checkout here</string>
    <string name="maxUploadDocumentSize">Unable to process! Max upload document size is 1 mb</string>
    <string name="tasknotstatedyet">Your task has not stated yet</string>
    <string name="filetypenotsupported">File type not supported</string>
    <string name="filenotexist">File not exist</string>
    <string name="documentnotsupported">Something went wrong with the document</string>
    <string name="didnotgetanyresponse">Unable to process the request</string>
    <string name="waitweareuploading">Please wait.. Data is uploading</string>
    <string name="halt_name">Halt name: </string>
    <string name="checkin_radius">Checkin radius: </string>
    <string name="time_to_spend">Time to spend: </string>
    <string name="camera_error">Problem with camera</string>
    <string name="sendMessageOnPause"> has paused the route for</string>
    <string name="selfCheck_In">Self Check-In</string>
    <string name="leaveManagement">Manage Leave</string>
    <string name="enter_your_route">Enter route</string>
    <string name="submit">Submit</string>
    <string name="remarks">Remarks</string>
    <string name="checkin_dialog">CheckIn Dialog</string>
    <string name="remark">Remark</string>
    <string name="routename">Route</string>
    <string name="plannedtime">Planned Timing</string>
    <string name="assignedDate">Assigned Date:</string>
    <string name="actualtime">Actual Timing</string>
    <string name="assigned">"Assigned "</string>
    <string name="inpg">"In Progress "</string>
    <string name="pending">"Pending "</string>
    <string name="complete">"Completed "</string>
    <string name="changelanguage">CHANGE LANGUAGE</string>
    <string name="langchangefailure">Try a different language</string>
    <string name="selectlanguage">Select one language</string>
    <string name="langstring">langstring</string>
    <string name="langchangesuccess">Language changed successfully</string>
    <string name="version">Version %s</string>
    <string name="duration">Duration</string>
    <string name="timing">Timing</string>
    <string name="workdays">Working Days</string>
    <string name="trackid">"Tracking Id: "</string>
    <string name="routassignid">"Route Assignment Id: "</string>
    <string name="patrollerid">"Patroller Id: "</string>
    <string name="usernamee">"Username: "</string>
    <string name="patrofname">"Patroller Fullname: "</string>
    <string name="netprovider">"Network Provider: "</string>
    <string name="insidebuffr">"Is Inside Buffer: "</string>
    <string name="deviationplanned">"Deviation From Planned: "</string>
    <string name="lastlocdist">"Dist From Last Location: "</string>
    <string name="drivesped">"Driving Speed: "</string>
    <string name="batterpercent">"Battery Percentage: "</string>
    <string name="mobtime">"Mobile Time: "</string>
    <string name="servertime">"Server Time: "</string>
    <string name="plannedendtime">Planned end time</string>
    <string name="managerRemarks">Manager Remarks</string>
    <string name="confirm">Confirm?</string>
    <string name="approveLeave">Are you sure you want to Approve this Leave?</string>
</resources>